# proto2ros-conversion

./: .gitignore  README.md
gpal_proto_bridge/: CMakeLists.txt  ekart_zerocopy_pointcloud.py  package.xml
gpal_proto_bridge/cmake/: gpal_proto_seeds.cmake
gpal_proto_bridge/config/: db2bag_topics.yaml  proto2ros_overlay.yaml
gpal_proto_bridge/gpal_proto_bridge/: __init__.py
gpal_proto_bridge/scripts/: bag_image_midframe  bag_peek_pointcloud2  db2bag  db_peek_camera_frame  db_peek_pointcloud_zerocopy
proto2ros/: CMakeLists.txt  README.md  package.xml
proto2ros/cmake/: proto2ros_generate.cmake
proto2ros/proto2ros/: compatibility.py  equivalences.py
proto2ros/proto2ros/descriptors/: utilities.py
proto2ros/proto2ros/output/templates/: conversions.py.jinja
proto2ros_tests/: CMakeLists.txt
proto2ros_tests/proto/: CMakeLists.txt  test.proto
proto2ros_tests/test/: test_proto2ros.cpp  test_proto2ros.py
rviz/: base_link_viz.rviz
