<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpal_proto_bridge</name>
  <version>0.1.0</version>
  <description>GPAL Protobuf definitions (proto-interface) with proto2ros-generated ROS 2 messages and an EkaRT SQLite db to rosbag2 tool.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>protobuf-dev</build_depend>
  <build_depend>python3-protobuf</build_depend>

  <depend>proto2ros</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- H.264/H.265: db2bag uses ffmpeg (bmp pipe) and optionally PyAV for stateful decode (pip install av / python3-av). -->
  <exec_depend>ffmpeg</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
