<?xml version="1.0"?>
<!--
Copyright (c) 2023 Robotics and AI Institute LLC dba RAI Institute. All rights reserved.
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>proto2ros</name>
  <version>1.0.1</version>
  <description>Protobuf to ROS 2 interoperability interfaces</description>
  <maintainer email="opensource@theaiinstitute.com">Robotics and AI Institute LLC dba RAI Institute</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_export_depend>rosidl_default_generators</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_mypy</buildtool_export_depend>

  <build_depend>clang-tidy</build_depend>

  <!-- Used by CMake-time code generation (proto2ros_generate); not only at runtime -->
  <build_depend>python3-inflection</build_depend>
  <build_depend>python3-jinja2</build_depend>
  <build_depend>python3-multipledispatch</build_depend>
  <build_depend>python3-networkx</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-protobuf</build_depend>
  <build_depend>python3-yaml</build_depend>
  <build_depend>rosidl_adapter</build_depend>

  <depend>protobuf</depend>
  <depend>protobuf-dev</depend>
  <depend>rclcpp</depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_adapter</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>python3-inflection</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>python3-multipledispatch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-protobuf</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
